[package]
name = "audio-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
glob = "0.3.1"
hound = "3.5.1"
log = { version = "0.4.21", features = ["release_max_level_info"] }
rayon = "1.8.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
symphonia = { version = "0.5.4", features = ["all", "opt-simd"] }
pretty_env_logger = "0.4"
lazy_static = "1.4.0"
env_logger = "0.11.3"
anyhow = "1.0.86"
ort = "2.0.0-rc.2"
ndarray = { version = "0.15.6"}


[target.'cfg(target_os = "linux")'.dependencies]
libpulse-binding = "2.5.0"
libpulse-simple-binding = "2.5.0"

[target.'cfg(not(target_os = "linux"))'.dependencies]
arrayvec = "0.7.1"
cpal = "0.13.3"
rb = "0.3.2"
rubato = "0.12.0"